# medai-a1

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.evidently  docker-compose.yml  main.py  pyproject.toml  requirements-api.txt  requirements-evidently.txt
.github/workflows/: ci.yml
grafana/provisioning/dashboards/: dashboards.yml  medai-a1-overview.json
prometheus/: prometheus.yml
src/api/: main.py
src/evidently_worker/: main.py
tests/: test_smoke.py
