[project]
name = "medai-a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently==0.4.*",
    "fastapi==0.115.*",
    "medmnist==3.0.*",
    "mlflow==2.16.*",
    "numpy<2.0",
    "onnx==1.16.*",
    "onnxruntime==1.19.*",
    "pandas==2.2.*",
    "pillow==10.*",
    "prometheus-fastapi-instrumentator==7.0.*",
    "pydantic==2.9.*",
    "python-multipart==0.0.12",
    "scikit-learn==1.5.*",
    "timm==1.0.*",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm==4.66.*",
    "uvicorn[standard]==0.30.*",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[dependency-groups]
dev = [
    "httpx==0.27.*",
    "mypy==1.11.*",
    "pytest==8.3.*",
    "pytest-cov==5.0.*",
    "ruff==0.6.*",
]

[tool.mypy]
ignore_missing_imports = true
